# SegmentSTP

./: .gitignore  CMakeLists.txt  README.md  split_graph.sh  test_index.sh  test_index_size.sh  test_search.sh
include/: Graph.h  Segment.h  SegmentGraph.h  utils.h
src/: CMakeLists.txt  Graph_load.cpp  utils.cpp
src/GraphAnalysis/: Graph_analysis.cpp
src/GraphIndex/: Graph_CH.cpp  Graph_H2H.cpp  Graph_PLL.cpp
src/GraphModify/: Graph_add_attr.cpp
src/GraphRange/: Graph_range_PLL.cpp  Graph_range_decomposition.cpp  Graph_range_search.cpp  rang_utils.cpp
src/GraphSearch/: Graph_dist_search.cpp
test/: CMakeLists.txt  test_build_range_index.cpp  test_index_search_range.cpp  test_index_search_time.cpp  test_index_size.cpp  test_range_stp.cpp  test_range_time.cpp
